<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Errors -->
    <string name="error_retrieve_backlogs">Failed to retrieve all backlogs.</string>
    <string name="error_retrieve_my_backlogs">Failed to retrieve my backlogs.</string>
    <string name="login_error">Invalid username or password, please try again.</string>
    <string name="connection_error">Check your connection and try again.</string>
    <string name="error_validation_date">Date : Invalid format (yyyy-mm-dd hh:mm)</string>
    <string name="feedback_search_error">Failed to retrieve search results</string>
    <string name="feedback_failed_retrieve_project">Failed to retrieve project data</string>

    <string name="app_name">Agilefant</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="all_backlogs">All Backlogs</string>
    <string name="loading">Loading</string>
    <string name="name">Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="domain">Domain</string>
    <string name="state">State</string>
    <string name="responsibles">Responsibles</string>
    <string name="_el_">Σ(EL)</string>
    <string name="_oe_">Σ(OE)</string>
    <string name="es">ES</string>
    <string name="stories">Stories</string>
    <string name="task_without_story">Task without story</string>
    <string name="agilefant_login">Agilefant login</string>
    <string name="logout">Logout</string>
    <string name="iteration_without_stories">iteration without stories</string>
    <string name="iteration_without_task">iteration without task</string>
    <string name="no_title">No title</string>
    <string name="burndown">Burndown</string>
    <string name="iteration">Iteration</string>
    <string name="comment">Comment</string>
    <string name="effort_spent">Effort Spent</string>
    <string name="spent_effort">Spent effort</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="dialog_datetime_title">Select date and time</string>
    <string name="dialog_datetime_positive">Set</string>
    <string name="dialog_datetime_negative">Cancel</string>
    <string name="dialog_effortleft_title">Effort left</string>
    <string name="dialog_state_title">Select state</string>
    <string name="effort_left">Effort left</string>
    <string name="my_stories">My Stories</string>
    <string name="daily_work">Daily Work</string>
    <string name="backlogs">Backlogs</string>
    <string name="my_work_queue">My Work Queue</string>
    <string name="context">Context</string>
    <string name="empty_queued_tasks">No queued tasks yet.</string>
    <string name="empty_my_stories">No Stories available.</string>
    <string name="empty_my_tasks">No tasks available.</string>
    <string name="empty_backlogs_default">No backlogs available.</string>
    <string name="empty_my_backlogs">No items assigned to you.</string>
    <string name="path_separator">></string>
    <string name="dialog_tasks_to_done_title">Set all tasks\' states to done?</string>
    <string name="dialog_tasks_to_done_msg">Do you want to mark all tasks as done as well?</string>
    <string name="feedback_failed_to_retrieve_daily_work">Failed to retrieve daily work!</string>
    <string name="feedback_failed_retrieve_iteration">Failed to retrieve the iteration!</string>
    <string name="feedback_failed_retrieve_story">Failed to retrieve the story!</string>
    <string name="feedback_succesfully_updated_spent_effort">Successfully updated spent effort!</string>
    <string name="feedback_failed_update_spent_effort">Failed to update spent effort!</string>
    <string name="feedback_succesfully_updated_effort_left">Successfully updated effort left!</string>
    <string name="feedback_failed_update_effort_left">Failed to update effort left!</string>
    <string name="feedback_successfully_updated_state">Successfully updated state!</string>
    <string name="feedback_failed_update_state">Failed to update the state!</string>
    <string name="feedback_successfully_updated_story">Successfully updated the story!</string>
    <string name="feedback_failed_update_story">Failed to update the story!</string>
    <string name="backlog">Backlog</string>
    <string name="assignees">Assignees</string>
    <string name="failed_to_retrieve_project_details">Failed to retrieve project details.</string>
    <string name="project_details">Project Details</string>
    <string name="feedback_failed_retrieve_users">Failed to retrieve users!</string>
    <string name="select_users">Select users</string>
    <string name="search_user">Search user</string>
    <string name="ok">OK</string>
    <string name="feedback_success_updated_project">Successfully updated project!</string>
    <string name="feedback_failed_update_project">Failed to update project!</string>
    <string name="start_tracking_task_time">Do you want to start tracking the task time?</string>
    <string name="dialog_start_tracking_task_time_negative">Cancel</string>
    <string name="dialog_start_tracking_task_time_positive">@android:string/ok</string>
    <string name="start_tracking_or_update">Track or update?</string>
    <string name="dialog_start_tracking_task_time_track">Track Time</string>
    <string name="dialog_start_tracking_task_effort_spent">Update Effort Spent</string>
    <string name="already_tracking_task_error">Already tracking a task, finish it before starting a new one!</string>
    <string name="feedback_success_updated_task_rank">Successfully updated task\'s rank</string>
    <string name="feedback_failed_update_tasks_rank">Failed to update task\'s rank</string>
    <string name="notification_action">Action</string>
    <string name="notification_pause">Pause</string>
    <string name="notification_play">Play</string>
    <string name="notification_submit">Submit</string>
    <string name="notification_close">Close</string>
    <string name="notification_content_text">Tracking: %1$s.</string>
    <string name="chronometer_format">Elapsed Time: %s</string>
    <string name="feedback_failed_update_story_rank">Failed to update the story\'s rank!</string>
    <string name="feedback_success_update_story_rank">Successfully updated the story\'s rank!</string>
    <string name="error_validate_effort_left">Please fill effort spent with a value other than 0</string>
    <string name="dialog_update_task_state">Do you want to change task status to ready as effort left is 0? Otherwise, please update that value.</string>
    <string name="dialog_update_task_state_negative">Cancel</string>
    <string name="new_story">New Story</string>
    <string name="saved_story">Story successfully created!</string>
    <string name="error_saving_story">Failed to create story!</string>
    <string name="new_task">New Task</string>
    <string name="saved_task">Task Successfully created!</string>
    <string name="error_saving_task">Failed to create task!</string>
    <string name="context_hint">Search iteration</string>
    <string name="feedback_failed_current_iterations_retrieval">Failed to retrieve current iterations!</string>
    <string name="validation_empty_context">Context can\'t be empty!</string>
    <string name="validation_empty_name">Name can\'t be empty!</string>
    <string name="iteration_details">Iteration details</string>
    <string name="original_estimate">Orig. Est.</string>
    <string name="stories_done">Stories done</string>
    <string name="task_done">Task done</string>
    <string name="logging_in">Logging in</string>
    <string name="action_search">Search</string>

    <!-- Content Description-->
    <string name="cd_open_calendar">Date picker</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="state_not_started">N</string>
    <string name="state_started">I</string>
    <string name="state_pending">P</string>
    <string name="state_blocked">B</string>
    <string name="state_implemented">R</string>
    <string name="state_done">D</string>
    <string name="state_deferred">D</string>
    <string name="plus_expanded">+</string>
    <string name="minus_expanded">-</string>

    <string name="state_not_started_full">Not started</string>
    <string name="state_started_full">In progress</string>
    <string name="state_pending_full">Pending</string>
    <string name="state_blocked_full">Blocked</string>
    <string name="state_implemented_full">Ready</string>
    <string name="state_done_full">Done</string>
    <string name="state_deferred_full">Deferred</string>
    <string name="no_iteration">None</string>

    <!-- SearchView -->
    <string name="search_hint_backlog">Search for backlogs</string>
    <string name="search_description_backlog">Search for a backlog item from the list</string>

</resources>