<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/storie_header_title"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/column_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="0.45"
        android:text="@string/name"
        android:textColor="@android:color/black"
        />

    <TextView
        android:id="@+id/column_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:text="@string/state"
        android:textColor="@android:color/black"
        />

    <TextView
        android:id="@+id/column_responsibles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="0.95"
        android:singleLine="true"
        android:text="@string/responsibles"
        android:textColor="@android:color/black"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/column_effort_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:text="@string/_el_"
        android:textColor="@android:color/black"
        />

    <TextView
        android:id="@+id/column_original_estimate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:text="@string/_oe_"
        android:textColor="@android:color/black"
        android:visibility="gone"
         />

    <TextView
        android:id="@+id/column_spent_effort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:text="@string/es"
        android:textColor="@android:color/black"
        android:visibility="gone"
         />

</LinearLayout>