<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/storie_header_title"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="5dp" >

    <TextView
        android:id="@+id/column_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.45"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/name"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/column_context"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.65"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/context"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/column_responsibles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/responsibles"
        android:textColor="@android:color/black"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/column_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.85"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/state"
        android:textColor="@android:color/black" />

</LinearLayout>