<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/storie_header_title"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/header_padding" >

    <TextView
        android:id="@+id/column_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/column_name"
        android:text="@string/name"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/column_context"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/column_context"
        android:text="@string/context"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/column_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/column_state"
        android:text="@string/state"
        android:textColor="@android:color/black" />

</LinearLayout>