<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_splash_background" 
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/margin_login" >

        <LinearLayout
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/gradient_login_title"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/agilefant_login"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/domain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:layout_marginTop="3dp"
                android:hint="@string/domain"
                android:inputType="textUri"
                android:padding="10dp"
                style="@style/InputTextMediumStyle" />
        </LinearLayout>

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/login_title"
            android:layout_margin="10dp"
            android:background="@drawable/agilefant_logo_home"
            android:contentDescription="@string/agilefant_login" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_title"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@id/app_icon"
            android:hint="@string/username"
            style="@style/InputTextMediumStyle"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@id/app_icon"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/InputTextMediumStyle" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/app_icon"
            android:text="@string/log_in"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>