<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:background="#163240"
        android:scaleType="centerInside"
        android:contentDescription="@null"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/chronometer_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/app_icon"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:textSize="14sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/app_icon"
        android:layout_below="@id/chronometer_description"
        android:orientation="horizontal"
        android:weightSum="1">

        <Chronometer
            android:id="@+id/trackChronometer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:layout_weight="0.99"/>


        <ImageButton
            android:id="@+id/chronometer_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:paddingBottom="@dimen/notification_padding_bottom_top"
            android:paddingLeft="@dimen/notification_padding_left_right"
            android:paddingRight="@dimen/notification_padding_left_right"
            android:paddingTop="@dimen/notification_padding_bottom_top"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_notification_pause"
            android:contentDescription="@string/notification_action"
            android:text="@string/notification_pause" />

        <ImageButton
            android:id="@+id/chronometer_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:paddingBottom="@dimen/notification_padding_bottom_top"
            android:paddingLeft="@dimen/notification_padding_left_right"
            android:paddingRight="@dimen/notification_padding_left_right"
            android:paddingTop="@dimen/notification_padding_bottom_top"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_notification_save"
            android:contentDescription="@string/notification_close"
            android:text="@string/notification_close"/>

        <ImageButton
            android:id="@+id/chronometer_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:paddingBottom="@dimen/notification_padding_bottom_top"
            android:paddingLeft="@dimen/notification_padding_left_right"
            android:paddingRight="@dimen/notification_padding_left_right"
            android:paddingTop="@dimen/notification_padding_bottom_top"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_window_close"
            android:contentDescription="@string/notification_submit"
            android:text="@string/notification_submit" />

    </LinearLayout>


</RelativeLayout>